--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons"></div>
+		<div id="buttons">
+			<button id="button-test">guzik TEST</button>
+			    <button id="button-rock">kamień</button>
+			        <button id="button-paper">papier</button>
+			           <button id="button-scissors">nożyce</button>
+        </div>
 		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
