--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 	<div class="container">
 		<div id="buttons">
-			<button id="button-test">guzik TEST</button>
-			    <button id="button-rock">kamień</button>
-			        <button id="button-paper">papier</button>
-			           <button id="button-scissors">nożyce</button>
+			<button-test="guzik TEST">Press me</button>
+			    <button-rock="kamień">Press me</button>
+			        <button-paper="papier">Press me</button>
+			           <button-scissors="nożyce">Press me</button>
         </div>
 		<div id="messages"></div>
 	</div>
