New changes in spite of errors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container">
 		<div id="buttons">
-			<button-test="TEST">Press me</button>
+			<button-test="testowanie">Press me</button>
 			    <button-rock="kamień">Press me</button>
 			        <button-paper="papier">Press me</button>
 			           <button-scissors="nożyce">Press me</button>
