--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<div class="container">
 		<div id="buttons">
-		    <button-rock="kamień">Press me</button>
-			    <button-paper="papier">Press me</button>
-			       <button-scissors="nożyce">Press me</button>
+		   <button id="button-rock">kamień</button>
+		   <button id="button-paper">papier</button>
+	       <button id="button-scissors">nożyce</button>
         </div>
 		<div id="messages"></div>
 	</div>
