--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<div class="container">
 		<div id="buttons">
-		   <button id="button-rock">kamień</button>
-		   <button id="button-paper">papier</button>
-	       <button id="button-scissors">nożyce</button>
+		   <button onclick="button-rock">kamień</button>
+		   <button onclick="button-paper">papier</button>
+	       <button onclick="button-scissors">nożyce</button>
         </div>
 		<div id="messages"></div>
 	</div>
