--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<div class="container">
 		<div id="buttons">
-		   <button onclick="button-rock">kamień</button>
-		   <button onclick="button-paper">papier</button>
-	       <button onclick="button-scissors">nożyce</button>
+		   <div id="button-rock" onclick= "myFunction()">kamień</button>
+		   <div id="button-paper" onclick="myFunction()">papier</button>
+	       <div id="button-scissors" onclick="myFunction()">nożyce</button>
         </div>
 		<div id="messages"></div>
 	</div>
