--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<div class="container">
 		<div id="buttons">
-		   <div id="button-rock" onclick= "myFunction()">kamień</button>
-		   <div id="button-paper" onclick="myFunction()">papier</button>
-	       <div id="button-scissors" onclick="myFunction()">nożyce</button>
+		   <button class="button-rock button">kamień</button>
+		   <button class="button-paper button">papier</button>
+	       <button class="button-scissors button">nożyce</button>
         </div>
 		<div id="messages"></div>
 	</div>
