--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
 	<div class="container">
 		<div id="buttons">
-		   <button class="button-rock button">kamień</button>
-		   <button class="button-paper button">papier</button>
-	       <button class="button-scissors button">nożyce</button>
+			<div class="button-container">
+				<button id="button-rock">kamień</button>
+			<div class="button-container">	
+				 <button id="button-paper">papier</button>
+			<div class="button-container">	 
+				<button id="button-scissors">nożyce</button>
         </div>
 		<div id="messages"></div>
 	</div>
