--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons">
-			<div class="button-container">
-				<button id="button-rock">kamień</button>
-			</div>	
-			<div class="button-container">	
-				 <button id="button-paper">papier</button>
-			</div>	 
-			<div class="button-container">	 
-				<button id="button-scissors">nożyce</button>
-        </div>
+		<div id="buttons" class="buttons">
+			<button type="button" id="button-rock" class="button-rock">Kamień</button>
+			<button type="button" id="button-paper" class="button-paper">Papier</button>
+			<button type="button" id="button-scissors" class="button-scissors">Nożyce</button>
+			<button type="button" id="button-rock" class="button-rock">kamień</button>
+			<button type="button" id="button-paper" class="button-paper">papier</button>
+			<button type="button" id="button-scissors" class="button-scissors">nożyce</button>
+		</div>	
 		<div id="messages"></div>
-
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
 </body>
