--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 <body>
 	<div class="container">
 		<div id="buttons" class="buttons">
-			<button type="button" id="button-rock" class="button-rock">Kamień</button>
-			<button type="button" id="button-paper" class="button-paper">Papier</button>
-			<button type="button" id="button-scissors" class="button-scissors">Nożyce</button>
 			<button type="button" id="button-rock" class="button-rock">kamień</button>
 			<button type="button" id="button-paper" class="button-paper">papier</button>
 			<button type="button" id="button-scissors" class="button-scissors">nożyce</button>
-		</div>	
-		<div id="messages"></div>
+		</div>		
+		<div id="messages"class="message"></div>
+	</div>	
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
 </body>
