Add new changes

--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Kamień, papier, nożyce</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="container">
-		<div id="buttons" class="buttons">
-			<button type="button" id="button-rock" class="button-rock">kamień</button>
-			<button type="button" id="button-paper" class="button-paper">papier</button>
-			<button type="button" id="button-scissors" class="button-scissors">nożyce</button>
+		<div id="buttons">
+			<button id="button-rock">kamień</button>
+			<button id="button-paper">papier</button>
+			<button id="button-scissors">nożyce</button>
+			<button class="btn" id="button-rock">kamień</button>
+			<button class="btn" id="button-paper">papier</button>
+			<button class="btn" id="button-scissors">nożyce</button>
 		</div>
-		<div id="messages" class="message"></div>
+		<div id="messages">
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
