Add new changes

--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons">
-			<button id="button-rock">kamień</button>
-			<button id="button-paper">papier</button>
-			<button id="button-scissors">nożyce</button>
-			<button class="btn" id="button-rock">kamień</button>
-			<button class="btn" id="button-paper">papier</button>
-			<button class="btn" id="button-scissors">nożyce</button>
+		<div id="buttons" class="buttons">
+			<button type="button" id="button-rock" class="button-rock">kamień</button>
+			<button type="button" id="button-paper" class="button-paper">papier</button>
+			<button type="button" id="button-scissors"class="button-scissors">nożyce</button>
 		</div>
-		<div id="messages">
+		<div id="messages" class="message"></div>
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
