Changes from var to let'argButtonName'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<button type="button" id="button-paper" class="button-paper">papier</button>
 			<button type="button" id="button-scissors"class="button-scissors">nożyce</button>
 		</div>
-		<div id="messages" class="message"></div>
+		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
